--- a/FindOrgUaWeb.csproj
+++ b/FindOrgUaWeb.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\AccountingSoftwareLib\AccountingSoftware\AccountingSoftware.csproj" />
+    <ProjectReference Include="..\FindOrgUa\FindOrgUa.csproj" />
   </ItemGroup>
 
 </Project>
